# emolumentos-pr

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: experimentar.py
src/emolumentos_pr/: __init__.py  calculo.py  cli.py  erros.py  formatacao.py  modelos.py  tabelas.py  vrcext.py
tests/: conftest.py  test_calculo.py  test_casos_reais.py  test_formatacao.py
